--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,2 @@
-anyio==3.5.0
-asgiref==3.5.0
-asyncpg==0.25.0
-black==22.1.0
-click==8.0.4
-databases==0.5.5
-fastapi==0.74.0
-greenlet==1.1.2
-gunicorn==20.1.0
-h11==0.13.0
-httptools==0.3.0
-idna==3.3
-isort==5.10.1
-mypy-extensions==0.4.3
-pathspec==0.9.0
-platformdirs==2.5.1
-psycopg2-binary==2.9.3
-pydantic==1.9.0
-python-dotenv==0.19.2
-PyYAML==6.0
-sniffio==1.2.0
-SQLAlchemy==1.4.31
-starlette==0.17.1
-tomli==2.0.1
-typing_extensions==4.1.1
-uvicorn==0.17.5
-uvloop==0.16.0
-watchgod==0.7
-websockets==10.1
+-r src/requirements.txt
+-r tests/requirements.txt
