--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -21,6 +21,7 @@ sniffio==1.2.0
 SQLAlchemy==1.4.31
 starlette==0.17.1
 tomli==2.0.1
+typer==0.4.0
 typing_extensions==4.1.1
 uvicorn==0.17.5
 uvloop==0.16.0
