--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,9 @@
 [isort]
 line_length=120
+multi_line_output=3
+include_trailing_comma=True
+force_grid_wrap=0
+combine_as_imports=True
 
 [flake8]
 max-line-length = 120
