--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,9 +1,10 @@
 aenum==3.1.11
-alembic==1.7.7
+alembic==1.8.0
 fastapi==0.78.0
 platformdirs==2.5.2
 pydantic==1.9.1
 requests==2.27.1
-SQLAlchemy==1.4.36
+SQLAlchemy==1.4.37
 typer==0.4.1
 psycopg2-binary==2.9.3
+python-multipart==0.0.5
