--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,10 +1,13 @@
 aenum==3.1.11
 alembic==1.8.0
 fastapi==0.78.0
+passlib[bcrypt]==1.7.4
 platformdirs==2.5.2
-pydantic==1.9.1
+psycopg2-binary==2.9.3
+pydantic[email]==1.9.1
+python-jose[cryptography]==3.3.0
+python-multipart==0.0.5
 requests==2.27.1
+starlette==0.19.1
 SQLAlchemy==1.4.37
 typer==0.4.1
-psycopg2-binary==2.9.3
-python-multipart==0.0.5
