--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,5 +1,5 @@
 aenum==3.1.11
-alembic==1.8.0
+alembic==1.8.1
 fastapi==0.78.0
 passlib[bcrypt]==1.7.4
 platformdirs==2.5.2
@@ -7,7 +7,8 @@ psycopg2-binary==2.9.3
 pydantic[email]==1.9.1
 python-jose[cryptography]==3.3.0
 python-multipart==0.0.5
-requests==2.27.1
-starlette==0.19.1
-SQLAlchemy==1.4.37
+requests==2.28.1
+starlette==0.20.4
+SQLAlchemy==1.4.39
 typer==0.4.1
+uvicorn==0.18.2
